<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.seleniumTest</groupId>
    <artifactId>SeleniumTest</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>SeleniumTest</name>
    <description>POC for selenium testing project implementation.</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <driver>chrome</driver>
        <maximize>false</maximize>
        <executor>jenkins</executor>
        <screenshot>onStep</screenshot>
        <timeout>10</timeout>
        <threadCount>3</threadCount>

        <webdrivermanager-version>5.3.3</webdrivermanager-version>
        <testng-version>7.7.1</testng-version>
        <log4j-core-version>2.20.0</log4j-core-version>
        <selenium-java-version>4.9.1</selenium-java-version>
        <jul-to-slf4j-version>2.0.7</jul-to-slf4j-version>
        <cucumber-version>7.12.0</cucumber-version>
        <gherkin-version>26.0.1</gherkin-version>
        <maven-compiler-plugin-version>3.11.0</maven-compiler-plugin-version>
        <maven-surefire-plugin-version>3.0.0-M7</maven-surefire-plugin-version>
        <aspectjweaver-version>1.9.8.RC2</aspectjweaver-version>
        <allure-maven-version>2.22.0</allure-maven-version>
        <allure-test-report-version>2.21.0</allure-test-report-version>
        <allure-test-report-arifact>allure-cucumber7-jvm</allure-test-report-arifact>
        <cucumber-picocontainer-version>7.11.1</cucumber-picocontainer-version>
        <rest-assured-version>5.3.0</rest-assured-version>
        <jackson-core-version>2.15.2</jackson-core-version>
        <lombok-version>1.18.26</lombok-version>
    </properties>

    <dependencies>
        <!-- WebDriver automated manager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager-version}</version>
        </dependency>

        <!-- Testing framework -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng-version}</version>
        </dependency>

        <!-- Logger dependency -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core-version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>2.0.5</version>
            <scope>runtime</scope>
        </dependency>
        <!-- Selenium framework for web testing -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java-version}</version>
        </dependency>

        <!-- Reporting framework -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${jul-to-slf4j-version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber-version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>gherkin</artifactId>
            <version>${gherkin-version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber-picocontainer-version}</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured-version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson-core-version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok-version}</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>${allure-test-report-arifact}</artifactId>
            <version>${allure-test-report-version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>TestNG</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin-version}</version>
                        <configuration>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>${threadCount}</value>
                                </property>
                            </properties>
                            <suiteXmlFiles>
                                <suiteXmlFile>config/testng.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>CucumberWeb</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin-version}</version>
                        <configuration>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>${threadCount}</value>
                                </property>
                            </properties>
                            <suiteXmlFiles>
                                <suiteXmlFile>config/cucumberWeb.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>CucumberApi</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin-version}</version>
                        <configuration>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>${threadCount}</value>
                                </property>
                            </properties>
                            <suiteXmlFiles>
                                <suiteXmlFile>config/cucumberApi.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>TestNG+Cucumber</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin-version}</version>
                        <configuration>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>${threadCount}</value>
                                </property>
                            </properties>
                            <suiteXmlFiles>
                                <suiteXmlFile>config/cucumber.xml</suiteXmlFile>
                                <suiteXmlFile>config/testng.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <reporting>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven-version}</version>
                <configuration>
                    <propertiesFilePath>test/resources/allure.properties</propertiesFilePath>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>